cleaned up some bugs on the profile page

--- a/Develop/views/index.html
+++ b/Develop/views/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/Develop/public/css/style.css">
     <link rel="stylesheet" href="/Develop/public/css/mystyles.css"
 </head>
-<body class="user-body">
+<!-- <body class="user-body">
   <section class="section">
     <div class="">
         <div class="flip-tile ">
@@ -39,6 +39,38 @@
         </div>
     </div>
 </section>
+</body> -->
+<body class="user-body">
+    <section class="section">
+        <div class="container">
+            <div class="tile is-ancestor">
+                <div class="tile  is-vertical is-parent">
+                    <div class="tile is-child box left-tile">
+                        <h1 class="title has-text-centered">Wyatt Food Truck </h1>
+                        <figure class="image is-128x128 centered-image ">
+                            <img class="is-rounded" src="/Develop/public/images/BurgersOnWheels-Logo.png" alt="Food truck profile picture">
+                        </figure>
+                    </div>
+                </div>
+                <div class="tile is-parent">
+                    <div class="tile is-child box right-tile">
+                        <h1 class="title has-text-centered">Menu</h1>
+                        <div class="content">
+                            <ul>
+                                {{#each menu-items as |item|}}
+                                <li>
+                                    <p class="title is-5">{{item.name}}</p>
+                                    <p class="subtitle is-6">Price: ${{item.price}}</p>
+                                </li>
+                                {{/each}}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="/js/profile"></script>
 </body>
 
  <script src="/Develop/public/js/tileflip.js"></script>
