--- a/Develop/views/profile.handlebars
+++ b/Develop/views/profile.handlebars
@@ -2,9 +2,9 @@
     <section class="section">
         <div class="container">
             <div class="tile is-ancestor">
-                <div class="tile is-4 is-vertical is-parent">
+                <div class="tile  is-vertical is-parent">
                     <div class="tile is-child box left-tile">
-                        <h1 class="title has-text-centered">{{name}}</h1>
+                        <h1 class="title centered-image">{{name}}</h1>
                         <figure class="image is-128x128 has-text-centered">
                             <img class="is-rounded" src="{{image}}" alt="Food truck profile picture">
                         </figure>
