--- a/Develop/public/css/style.css
+++ b/Develop/public/css/style.css
@@ -237,7 +237,7 @@ input[type="text"]::placeholder {
     perspective: 1000px;
     width: 300px;
     height: 300px;
-    background-color: #E17A2C;
+    background-color: #2A4D58;
 }
 .flip-tile-inner {
     position: relative;
@@ -245,7 +245,7 @@ input[type="text"]::placeholder {
     transition: transform 2s;
     width: 100%;
     height: 100%;
-    background-color: #E17A2C;
+    background-color: #2A4D58;
 }
 .flip-tile:click .flip-tile-inner {
     transform: rotateY(180deg);
@@ -256,7 +256,7 @@ input[type="text"]::placeholder {
     backface-visibility: hidden;
     width: 100%;
     height: 100%;
-    background-color: #E17A2C;
+    background-color: #2A4D58;
 }
 .flip-tile-back {
     transform: rotateY(180deg);
@@ -269,12 +269,12 @@ input[type="text"]::placeholder {
     
 }
 .tile-front {
-    background-color: #E17A2C;
+    background-color: #2A4D58;
 }
 .tile-back {
-    background-color: #D95437;
+    background-color: #2A4D58;
 }
 
 .results-title {
-    color: #D95437 !important;
+    color: #E17A2C !important;
 }
