--- a/Develop/views/results.handlebars
+++ b/Develop/views/results.handlebars
@@ -1,7 +1,7 @@
 <body class="user-body">
     <section class="section">
         <div class="container">
-            <h1 class="title has-text-centered">Your Flavor is Found!</h1>
+            <h1 class="title has-text-centered results-title">Your Flavor is Found!</h1>
             <div class="tile is-ancestor is-flex-wrap-wrap">
                 {{#each trucks as |truck|}}
                 {{>tiles}}
