--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
 
 <body>
 
-    <div class="flex-column justify-space-around">
+    <div class="flex-column">
 
         <nav class="custom-navbar bg-dark-blue" role="navigation" aria-label="main navigation">
             <a class="logo-container" href="/">
@@ -48,7 +48,7 @@
             </div>
         </nav>
 
-        <main class="container" id="content-area">
+        <main id="content-area">
             {{{ body }}}
         </main>
     </div>
