--- a/Develop/views/truck.handlebars
+++ b/Develop/views/truck.handlebars
@@ -39,6 +39,12 @@
             <input class="input" type="text" placeholder="instagram.com" id="link">
         </div>
     </div>
+    <div class="field">
+        <label class="label">Address</label>
+        <div class="control">
+            <input class="input" type="text" placeholder="123 Feast Findr Lane Hometown, USA" id="address">
+        </div>
+    </div>
 
 
     <button class="button is-primary">Add</button>
