--- a/Develop/public/css/style.css
+++ b/Develop/public/css/style.css
@@ -252,11 +252,14 @@ input[type="text"]::placeholder {
 }
 .flip-tile-front,
 .flip-tile-back {
+    overflow: hidden;
     position: absolute;
     backface-visibility: hidden;
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: #2A4D58;
+    word-wrap: break-word;
+    white-space: pre-wrap;
 }
 .flip-tile-back {
     transform: rotateY(180deg);
@@ -277,4 +280,8 @@ input[type="text"]::placeholder {
 
 .results-title {
     color: #E17A2C !important;
+}
+
+.card-header1{
+    color: #D95437;
 }
