added directions button on menu card, added route and client js for functionality

--- a/Develop/views/partials/tiles.handlebars
+++ b/Develop/views/partials/tiles.handlebars
@@ -54,6 +54,7 @@
             {{/each}}
           </ul>
         </div>
+        <button class="button directions-button" data-truck-id="{{id}}">Get Directions</button>
       </div>
     </div>
   </div>
