--- a/Develop/views/partials/tiles.handlebars
+++ b/Develop/views/partials/tiles.handlebars
@@ -1,34 +1,5 @@
-{{!-- <body>
-    <section class="section">
-        <div class="container">
-            <div class="flip-tile">
-                <div class="flip-tile-inner">
-                    <div class="flip-tile-front tile is-child box">
-                        <h1 class="title tile-content has-text-centered">{{name}}</h1>
-                        <figure class="image is-128x128 has-text-centered">
-                            <img class="is-rounded" src="{{image}}" alt="Food truck profile picture">
-                        </figure>
-                        <p class="subtitle has-text-centered tile-content">Click to see menu</p>
-                    </div>
-                    <div class="flip-tile-back tile is-child box">
-                        <h1 class="title has-text-centered">Menu</h1>
-                        <div class="content">
-                            <ul>
-                                {{#each menu-items as |item|}}
-                                <li>
-                                    <p class="title is-5 tile-content">{{item.name}}</p>
-                                    <p class="subtitle is-6 tile-content">Price: ${{item.price}}</p>
-                                </li>
-                                {{/each}}
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> --}}
     <div class="column is-half-tablet is-one-third-desktop">
-  <div class="card">
+  <div class="card custom-card">
   <header class="card-header1 has-text-centered">
     <p class="card-header-title has-text-centered">
       {{name}}
@@ -57,9 +28,6 @@
       </div>
     </div>
   </div>
-  <footer class="card-footer">
-    <a href="{{truck.address}}" class="card-footer-item">{{truck.address}}</a>
-  </footer>
 </div>
 </div>
     <script src="/js/tileflip.js"></script>
