--- a/Develop/views/partials/tiles.handlebars
+++ b/Develop/views/partials/tiles.handlebars
@@ -28,7 +28,7 @@
         </div>
     </section> --}}
     <div class="column is-half-tablet is-one-third-desktop">
-  <div class="card">
+  <div class="card custom-card">
   <header class="card-header1 has-text-centered">
     <p class="card-header-title has-text-centered">
       {{name}}
@@ -58,9 +58,6 @@
       </div>
     </div>
   </div>
-  <footer class="card-footer">
-    <a href="{{truck.address}}" class="card-footer-item">{{truck.address}}</a>
-  </footer>
 </div>
 </div>
     <script src="/js/tileflip.js"></script>
