--- a/Develop/views/partials/tiles.handlebars
+++ b/Develop/views/partials/tiles.handlebars
@@ -1,67 +1,38 @@
-{{!-- <body>
-    <section class="section">
-        <div class="container">
-            <div class="flip-tile">
-                <div class="flip-tile-inner">
-                    <div class="flip-tile-front tile is-child box">
-                        <h1 class="title tile-content has-text-centered">{{name}}</h1>
-                        <figure class="image is-128x128 has-text-centered">
+<body>
+    <div class="column is-half-tablet is-one-third-desktop">
+        <div class="card">
+            <header class="card-header1 has-text-centered">
+                <p class="card-header-title has-text-centered">
+                    {{name}}
+                </p>
+            </header>
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-left"></div>
+                    <div class="media-right">
+                        <figure class="image is-128x128">
                             <img class="is-rounded" src="{{image}}" alt="Food truck profile picture">
                         </figure>
-                        <p class="subtitle has-text-centered tile-content">Click to see menu</p>
                     </div>
-                    <div class="flip-tile-back tile is-child box">
-                        <h1 class="title has-text-centered">Menu</h1>
+                    <div class="media-content">
+                        <h2 class="title is-4 has-text-centered">Menu</h2>
                         <div class="content">
                             <ul>
                                 {{#each menu-items as |item|}}
                                 <li>
-                                    <p class="title is-5 tile-content">{{item.name}}</p>
-                                    <p class="subtitle is-6 tile-content">Price: ${{item.price}}</p>
+                                    <p class="title is-5">{{item.name}}</p>
+                                    <p class="subtitle is-6">Price: ${{item.price}}</p>
                                 </li>
                                 {{/each}}
                             </ul>
                         </div>
+                        <button class="button directions-button" data-truck-id="{{id}}">Get Directions</button>
                     </div>
                 </div>
             </div>
+            <footer class="card-footer">
+                <a href="{{truck.address}}" class="card-footer-item">{{truck.address}}</a>
+            </footer>
         </div>
-    </section> --}}
-    <div class="column is-half-tablet is-one-third-desktop">
-  <div class="card">
-  <header class="card-header1 has-text-centered">
-    <p class="card-header-title has-text-centered">
-      {{name}}
-    </p>
-  </header>
-  <div class="card-content">
-    <div class="media">
-      <div class="media-left"></div>
-      <div class="media-right">
-        <figure class="image is-128x128">
-          <img class="is-rounded" src="{{image}}" alt="Food truck profile picture">
-        </figure>
-      </div>
-      <div class="media-content">
-        <h2 class="title is-4 has-text-centered">Menu</h2>
-        <div class="content">
-          <ul>
-           {{#each menu-items as |item|}}
-              <li>
-                <p class="title is-5">{{item.name}}</p>
-                <p class="subtitle is-6">Price: ${{item.price}}</p>
-              </li>
-            {{/each}}
-          </ul>
-        </div>
-        <button class="button directions-button" data-truck-id="{{id}}">Get Directions</button>
-      </div>
     </div>
-  </div>
-  <footer class="card-footer">
-    <a href="{{truck.address}}" class="card-footer-item">{{truck.address}}</a>
-  </footer>
-</div>
-</div>
-    <script src="/js/tileflip.js"></script>
 </body>
