--- a/Develop/views/results.handlebars
+++ b/Develop/views/results.handlebars
@@ -10,7 +10,7 @@
             </div>
             {{else}}
             <h1 class="title has-text-centered results-title">I'm sorry, there are no trucks in your area!</h1>
-            <a href="/" class="menu-button brand-font is-centered">Try again</a>
+            <a href="/" class="menu-button brand-font centered-link">Try again</a>
             {{/if}}
         </div>
     </section>
