--- a/Develop/public/css/style.css
+++ b/Develop/public/css/style.css
@@ -312,3 +312,13 @@ input[type="text"]::placeholder {
     background-color: #E17A2C !important;
     color: #2A4D58 !important;
 }
+
+.centered-link {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 8%;
+    text-align: center;
+    
+    /* margin-right: auto; */
+}
