--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,6 +8,14 @@
                         <figure class="image is-128x128 has-text-centered">
                             <img class="is-rounded" src="{{image}}" alt="Food truck profile picture">
                         </figure>
+                        <div class="form-group1">
+                            <label class="label">Update Address</label>
+                            <div class="control">
+                                <input class="input" type="text" placeholder="123 Feast Findr Lane Hometown, USA" id="address">
+                                <button type="submit" class="btn btn-primary centered-update" truck-id="{{id}}">Update</button>
+                            </div>
+                            
+                        </div>
                     </div>
                 </div>
                 <div class="tile is-parent">
@@ -28,5 +36,5 @@
             </div>
         </div>
     </section>
-    <script src="/js/profile"></script>
+    <script src="/js/profile.js"></script>
 </body>
